--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hugo-theme-icarus-lite"]
+[submodule "themes/hugo-theme-icarus-lite"]
 	path = themes/hugo-theme-icarus-lite
 	url = https://github.com/airinghost/hugo-theme-icarus-lite
